# zmk-to-kanata

./: .gitignore  CHANGELOG.md  CONSOLIDATED_PLAN.md  CONTRIBUTING.md  IMPLEMENTATION.md  MANUAL_REVIEW.md  README.md  RefactorDTS.md  advanced_features.kbd  analysis.md  ast.json  basic_keymap_out.yaml  ben_adapter.py  ben_adapter_fixed.py  ben_vallack_converter.py  ben_vallack_output.kbd  ben_vallack_test_out.kanata  card_out.kanata  complex_keymap_out.yaml  convert_ben_vallack.py  convert_ben_vallack_patched.py  coverage.out  extracted.yaml  fix_linter.sh  fixitup.md  kanata.yaml  kanata_transformer_test_output.txt  large_keymap_out.yaml  layer_transformer_unicode_macro_fix_test_output.txt  macroParserRefactoring.md  macro_parser_fix_test_output.txt  multi_layer_keymap.kbd  multi_layer_keymap_out.yaml  nickanalysis.md  patch_global_settings.py  piano_out.kanata  plan.md  preprocessed.dts  pyproject.toml  pytest.out  (+80 more)
converter/: cli.py  dts_preprocessor.py  error_recovery.py  kanata_converter.py  keymap_model.py  layer_parser.py  layer_transformer.py  main.py  models.py  setup.cfg  taphold_parser.py  zmk_to_kanata.py
docs/: README.md  api_documentation.md  architecture.md  binding_format.md  binding_parser.md  error_handling.md  error_recovery.md  key_mapping.md  known_limitations.md  limitations.md  macbook_workflow_testing.md  parser_state_machine.md  state_machine.md  test_coverage.md  test_scenarios.md  testing_guide.md  troubleshooting.md  user_guide.md  user_guide_examples.md  validation.md
examples/: README.md  advanced_features.dtsi  basic_keymap.dtsi  basic_keymap.kbd  ben_vallack_test.dtsi  complex_keymap.dtsi  complex_keymap.kbd  mac_home_row_mods.keymap  multi_layer_keymap.dtsi
(+194 files in other folders)
