[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zmk-kanata-converter"
version = "0.1.0"
authors = [
    { name="Nick Tokatana", email="nick@tokatana.com" },
]
description = "Convert ZMK keymaps to Kanata configuration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
zmk-kanata = "converter.main:main"

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]